<resources>
    <string name="app_name">Project_Generic</string>
    <string name="action_settings">Settings</string>
    <string name="coding_buddy">Coding Buddy</string>
    <string name="log_in">Log in:</string>
    <string name="username">Username</string>
    <string name="title_activity_what_to_do">whatToDo</string>
    <string name="version_1_0_alpha">Version: 1.0_Alpha</string>
    <string name="study">Study</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="learn_a_language">Learn A language</string>
    <string name="title_activity_languages_activity">languages_activity</string>
    <string name="title_activity_exercise_activity">exercise_activity</string>
    <string name="title_activity_topics_selection_java">topics_selection_java</string>
    <string name="intro">intro</string>
    <string name="decision_structures">Decision Structures</string>
    <string name="loop_structures">Loop Structures</string>
    <string name="arrays">Arrays</string>
    <string name="object_oreinted">Object Oreinted</string>
    <string name="classes_methods">Classes/Methods</string>
    <string name="object_oriented">Object Oriented</string>
    <string name="title_activity_lesson_activity">lesson_activity</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
</resources>
